5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1585_2894.log
== TEST (2019-03-21 11:40:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
infostore = (j1 = 101) + (j2 = 122) + (j3 = 133) + (j4 = 144) + (j5 = 155)+(j6 = 166) + (j7 = 177) + (j8 = 188)
saraiva = (j1 = 102) + (j2 = 123) + (j3 = 134) + (j4 = 145) + (j5 = 156)+(j6 = 167) + (j7 = 178) + (j8 = 189)
frete correios = 45
var = input(float())
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 2
    kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
infostore = (j1 = 101) + (j2 = 122) + (j3 = 133) + (j4 = 144) + (j5 = 155)+(j6 = 166) + (j7 = 177) + (j8 = 188)
saraiva = (j1 = 102) + (j2 = 123) + (j3 = 134) + (j4 = 145) + (j5 = 156)+(j6 = 167) + (j7 = 178) + (j8 = 189)
frete correios = 45
var1 = float("Kabum:")
var2
var3
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 2
    kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
infostore = (j1 = 101) + (j2 = 122) + (j3 = 133) + (j4 = 144) + (j5 = 155)+(j6 = 166) + (j7 = 177) + (j8 = 188)
saraiva = (j1 = 102) + (j2 = 123) + (j3 = 134) + (j4 = 145) + (j5 = 156)+(j6 = 167) + (j7 = 178) + (j8 = 189)
frete correios = 45
var1 = float("Kabum:")
var2 = float("infostore")
var3 = float("saraiva")
print(input("Em qual site vc deseja comprar?"))
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 2
    kabum = (j1 = 100) + (j2 = 120) + (j3 = 130) + (j4 = 140) + (j5 = 150)+(j6 = 160) + (j7 = 170) + (j8 = 180)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(101 * quantidade + frete)
site2 = float(102 * quantidade + frete)
site3 = float(103 * quantidade + frete)
quantidade = 8
frete = 45
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 10
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:54:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(input(101 * quantidade + frete))
site2 = float(input(102 * quantidade + frete))
site3 = float(input(103 * quantidade + frete))
quantidade = 8
frete = 45
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 10
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 + 45 ))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 ))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
80046.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 ))
frete = float(input(45))
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    frete = float(input(45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- OUTPUT:
8451.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156354
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
8451.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100.0 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.15917
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.01.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100.0 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- OUTPUT:
845.01.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:02:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 101 * quantidade + frete
site2 = 102 * quantidade + frete
site3 = 103 * quantidade + frete
quantidade = 8
frete = 45
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 = 101 * quantidade + frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:02:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 = 101 * quantidade + frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:04:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
total = j1 * Q1 + F1
print( total )
# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = j1 * Q1 + F1
NameError: name 'j1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:06:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
j1 = float(input("Qual o valor unitario do jogo? "))
total = j1 * Q1 + F1
Q1 = 8
F1 = 45
print( total )
# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = j1 * Q1 + F1
NameError: name 'Q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:08:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
j1 = float(input("Qual o valor unitario do jogo? "))
Q1 = 8
F1 = 45
total = j1 * Q1 + F1
print( total )
# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:09:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
j1 = float(input("Qual o valor unitario do jogo? "))
Q1 = 8
F1 = 45
total = j1 * Q1 + F1
print( total )
# Calculo do valor a ser pago, incluindo o frete:
#total = ?????

# Impressao do valor total:
#print(?????)
-- EXECUTION TIME:
0.134221
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
